# contextgem

./: .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSES.md  NOTICE  README.md  SECURITY.md  fabfile.py  licenseal.review.toml  pyproject.toml
.github/: CONTRIBUTOR_AGREEMENT.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation_improvement.md  feature_request.md
.github/contributors/: ilia-novikov.md
.github/workflows/: README.md  bandit-security.yml  ci-tests.yml  codeql.yml  contributor-agreement-check.yml  daily-import-test.yml  docs.yml  licenseal.yml  publish.yml  stale-issues.yml
contextgem/: __init__.py
contextgem/internal/: __init__.py  data_models.py  decorators.py  exceptions.py  items.py  loggers.py  registry.py  suppressions.py  utils.py
contextgem/internal/base/: __init__.py  abstract.py  aspects.py  attrs.py  concepts.py  data_models.py  documents.py  examples.py  images.py  instances.py  items.py  llms.py  md_text.py  mixins.py  paras_and_sents.py  pipelines.py  serialization.py  utils.py
contextgem/internal/converters/: __init__.py
contextgem/internal/llm_output_structs/: __init__.py  aspect_structs.py  concept_structs.py  utils.py
contextgem/internal/prompts/: extract_aspect_items.j2  extract_concept_items.j2
contextgem/internal/system/: default_system_message.j2
contextgem/internal/tools/: __init__.py  docstring_parser.py  schema_generator.py
contextgem/internal/typings/: __init__.py  aliases.py  strings_to_types.py  typed_class_utils.py  types.py  types_normalization.py  types_to_strings.py  user_type_hints_validation.py  validators.py
contextgem/public/: __init__.py  aspects.py  concepts.py  data_models.py  decorators.py  documents.py  examples.py  images.py  llms.py  paragraphs.py  pipelines.py  sentences.py  utils.py
contextgem/public/converters/: __init__.py  docx.py
dev/: check_package.py  generate_notebooks.py  populate_project_readme.py  readme.template.md
dev/content_snippets/: feature_table.html
dev/notebooks/readme/: docx_converter.ipynb  llm_chat.ipynb  quickstart_aspect.ipynb  quickstart_concept.ipynb
dev/requirements/: requirements.dev.txt  requirements.main.txt
dev/usage_examples/readme/: docx_converter.py  llm_chat.py  quickstart.py  quickstart_aspect.py  quickstart_concept.py
docs/: Makefile  build_raw_docs_for_llm.py  docs-raw-for-llm.txt  make.bat
docs/source/: advanced_usage.rst  conf.py  how_it_works.rst  index.rst  installation.rst  llms.txt  logging_config.rst  motivation.rst  quickstart.rst  robots.txt  serialization.rst  vs_other_frameworks.rst
docs/source/_static/: custom.css
docs/source/api/: aspects.rst  concepts.rst  converters.rst  data_models.rst  decorators.rst  documents.rst  examples.rst  images.rst  llms.rst  paragraphs.rst  pipelines.rst  sentences.rst  utils.rst
docs/source/aspects/: aspects.rst
docs/source/concepts/: boolean_concept.rst  date_concept.rst  json_object_concept.rst  label_concept.rst  numerical_concept.rst  rating_concept.rst  string_concept.rst  supported_concepts.rst
docs/source/converters/: docx.rst
docs/source/documents/: document_config.rst
docs/source/llms/: chat_with_tools.rst  llm_config.rst  llm_extraction_methods.rst  supported_llms.rst
docs/source/optimizations/: optimization_accuracy.rst  optimization_choosing_llm.rst  optimization_cost.rst  (+3 more)
tests/: conftest.py  memory_profiling.py  test_all.py  test_properties.py  test_units.py  url_security.py  utils.py
tests/benchmark/: core.py
tests/cassettes/: TestAll.test_aspect_extraction_from_paragraphs[llm0].yaml  TestAll.test_aspect_extraction_from_paragraphs[llm1].yaml  TestAll.test_auto_pricing.yaml  TestAll.test_benchmarks.yaml  TestAll.test_chat.yaml  TestAll.test_chat_no_session.yaml  TestAll.test_chat_with_session.yaml  TestAll.test_chat_with_tools[False-False].yaml  TestAll.test_chat_with_tools[False-True].yaml  TestAll.test_chat_with_tools[True-False].yaml  TestAll.test_chat_with_tools[True-True].yaml  TestAll.test_chat_with_tools_required_choice.yaml  TestAll.test_docx_converter_llm_extract.yaml  TestAll.test_docx_converter_llm_extract[False].yaml  TestAll.test_docx_converter_llm_extract[True].yaml  TestAll.test_extract_all[llm0-document0].yaml  TestAll.test_extract_all[llm0-document1].yaml  TestAll.test_extract_all[llm0-document2].yaml  TestAll.test_extract_all[llm0-document3].yaml  TestAll.test_extract_all[llm0-document4].yaml  TestAll.test_extract_all[llm1-document0].yaml  TestAll.test_extract_all[llm1-document1].yaml  TestAll.test_extract_all[llm1-document2].yaml  TestAll.test_extract_all[llm1-document3].yaml  TestAll.test_extract_all[llm1-document4].yaml  TestAll.test_extract_aspects_from_document[llm0].yaml  TestAll.test_extract_aspects_from_document[llm1].yaml  TestAll.test_extract_bool_values.yaml  TestAll.test_extract_complex_json_object_concept.yaml  TestAll.test_extract_concepts_from_aspect[llm0].yaml  TestAll.test_extract_concepts_from_aspect[llm1].yaml  TestAll.test_extract_concepts_from_document[llm0].yaml  TestAll.test_extract_concepts_from_document[llm1].yaml  TestAll.test_extract_label_concept[llm0].yaml  TestAll.test_extract_label_concept[llm1].yaml  TestAll.test_extract_with_fallback.yaml  TestAll.test_gpt_5_with_reasoning_effort_param.yaml  TestAll.test_init_local_llm.yaml  TestAll.test_llm_extraction_error_exception.yaml  TestAll.test_local_llms.yaml  (+23 more)
tests/custom_prompts/: custom_prompt_aspects_no_tags.j2  custom_prompt_aspects_with_tags.j2  custom_prompt_concepts_no_tags.j2  custom_prompt_concepts_with_tags.j2
tests/docx_converted/: badly_formatted_md.txt  badly_formatted_paras_md.txt  badly_formatted_paras_raw.txt  badly_formatted_raw.txt
tests/docx_files/: badly_formatted.docx  en_nda_with_anomalies.docx  multimodal.docx  ua_nda_with_anomalies.docx
tests/ndas/: en_nda_with_anomalies.txt  ua_nda_with_anomalies.txt  zh_nda_with_anomalies.txt
tests/other_files/: complex_user_profile.txt  gdpr_modified_for_testing.txt
(+134 files in other folders)
